kubernetes/h2/catitres-h2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catitres-h2
  namespace: packapp09
spec:
  selector:
    matchLabels:
      app: catitres-h2
  replicas: 1
  template:
    metadata:
      labels:
        app: catitres-h2
    spec:
      containers:
      - name: catitres-h2
        image: registry.hackathon-container.com/packapp09/catitres-h2:1.0
        ports:
        - containerPort: 8080
      imagePullSecrets:
      - name: registry
