kubernetes/h2/catitres-h2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: catitres-h2-svc
  namespace: packapp09
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8989
    targetPort: 8080
    protocol: TCP
  selector:
    app: catitres-h2
